// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App> should render error message on problem with initial fetch 1`] = `
<PhoneLayout>
  <div
    className="wrapper"
  >
    <Error
      onClick={[Function]}
    />
  </div>
</PhoneLayout>
`;

exports[`<App> should render loader on initial fetch 1`] = `
<PhoneLayout>
  <div
    className="wrapper"
  >
    <Loader />
  </div>
</PhoneLayout>
`;
